# InteractivePendulumFractal

./: .gitignore  CMakeLists.txt  README.md  app.py
sources/: kernel.cl  simulation.cpp
